# architecture-pattern-recommendation-tool

./: .env  app.py  ingest.py  main.py  prompts.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/: patterns.json  sample_test_data.txt
