[project]
name = "architecture-pattern-recommendation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.12.0",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.0.2",
    "streamlit>=1.56.0",
]
